--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFiles": [
+      "./setupTests.js"
+    ]
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "2.2.2",
@@ -43,11 +47,18 @@
     "babel-eslint": "^10.1.0",
     "babel-preset-expo": "~8.1.0",
     "babel-preset-react-native": "^4.0.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-native": "^3.8.1"
+    "eslint-plugin-react-native": "^3.8.1",
+    "jest-expo": "^37.0.0",
+    "react-devtools": "^3.6.3",
+    "react-native-testing-library": "^1.13.0",
+    "react-test-renderer": "^16.13.1",
+    "redux-devtools-extension": "^2.13.8"
   },
   "private": true
 }
