--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-facebook": "~8.1.0",
     "expo-font": "~8.1.0",
     "expo-image-picker": "~8.1.0",
+    "expo-image-manipulator": "~8.1.0",
     "expo-location": "~8.1.0",
     "expo-media-library": "~8.1.0",
     "expo-permissions": "~8.1.0",
