--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
     "@use-expo/font": "^1.0.1",
+    "axios": "^0.19.2",
     "expo": "^37.0.4",
     "expo-camera": "~8.2.0",
     "expo-constants": "~9.0.0",
     "expo-facebook": "~8.1.0",
     "expo-font": "~8.1.0",
-    "expo-image-picker": "~8.1.0",
     "expo-image-manipulator": "~8.1.0",
+    "expo-image-picker": "~8.1.0",
     "expo-location": "~8.1.0",
     "expo-media-library": "~8.1.0",
     "expo-permissions": "~8.1.0",
@@ -58,8 +59,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-native": "^3.8.1",
-    "jest-expo": "^37.0.0",
-    "react-devtools": "^3.6.3"
+    "jest-expo": "^37.0.0"
   },
   "private": true
 }
